2007-09-16  Ben Motmans <ben.motmans@gmail.com> 

	* Makefile.am: link to the correct Mono.Addins dll

2007-09-07  Ben Motmans <ben.motmans@gmail.com> 

	* Dialogs/TableEditorDialog.cs, Dialogs/ProcedureEditorDialog.cs,
	  Dialogs/ViewEditorDialog.cs, Dialogs/UserEditorDialog.cs,
	  Dialogs/CreateDatabaseDialog.cs, Widgets/ColumnsEditorWidget.cs,
	  Widgets/PrimaryKeyConstraintEditorWidget.cs,
	  Widgets/CheckConstraintEditorWidget.cs, Widgets/TriggersEditorWidget.cs,
	  Widgets/ConstraintsEditorWidget.cs,
	  Widgets/ForeignKeyConstraintEditorWidget.cs,
	  Widgets/UniqueConstraintEditorWidget.cs, Widgets/IndicesEditorWidget.cs:
	  improved capabilities system

2007-08-29  Ben Motmans <ben.motmans@gmail.com> 

	* Dialogs/TableEditorDialog.cs: retrieve and store the list of database
	  tables for use in the constraint editor dialog
	* Widgets/ConstraintsEditorWidget.cs: use the correct list of database
	  tables

2007-08-29  Ben Motmans <ben.motmans@gmail.com> 

	* gtk-gui/gui.stetic: changes in auto generated code

2007-08-28  Ben Motmans <ben.motmans@gmail.com> 

	* Widgets/ConstraintsEditorWidget.cs: use correct parameters for
	  ForeignKeyConstraintEditorWidget ctor
	* Widgets/ForeignKeyConstraintEditorWidget.cs: fixed some copy paste errors
	* gtk-gui/gui.stetic, MonoDevelop.Database.Designer.mdp, Makefile.am: use
	  project references instead of assembly references

2007-08-28  Ben Motmans <ben.motmans@gmail.com> 

	* Widgets/ForeignKeyConstraintEditorWidget.cs,
	  gtk-gui/MonoDevelop.Database.Designer.ForeignKeyConstraintEditorWidget.cs,
	  gtk-gui/gui.stetic: GUI implementation

2007-08-03  Ben Motmans <ben.motmans@gmail.com>

	* Dialogs/TableEditorDialog.cs, Dialogs/ViewEditorDialog.cs, Dialogs/ProcedureEditorDialog.cs:
	added a warning widget that can show the user whats wrong with the schema object
	* Dialogs/PreviewDialog.cs: fixed the ctor
	* Widgets/TriggersEditorWidget.cs, Widgets/PrimaryKeyConstraintEditorWidget.cs, 