@@ -16,7 +16,6 @@
   <Contents>
     <File name="./gtk-gui/gui.stetic" subtype="Code" buildaction="EmbedAsResource" />
     <File name="./gtk-gui/generated.cs" subtype="Code" buildaction="Compile" />
-    <File name="./Commands/temp.cs" subtype="Code" buildaction="Compile" />
     <File name="./Widgets/TriggersEditorWidget.cs" subtype="Code" buildaction="Compile" />
     <File name="./gtk-gui/MonoDevelop.Database.Designer.TriggersEditorWidget.cs" subtype="Code" buildaction="Compile" />
     <File name="./Widgets/ColumnsEditorWidget.cs" subtype="Code" buildaction="Compile" />
