@@ -1,3 +1,8 @@
+2007-09-19  Ben Motmans <ben.motmans@gmail.com> 
+
+	* MonoDevelop.Database.Sql.Sqlite.addin.xml: temporarily disabled the Create
+	  table command due to a bug in the database provider
+
 2007-09-16  Ben Motmans <ben.motmans@gmail.com> 
 
 	* Makefile.am: link to the correct Mono.Addins dll
